Fix wrapping in changeset lists properly.

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -199,9 +199,16 @@ body {
   width: 100%;
 }
 
-#changeset_list .comment {
-  width: 60%;
-  max-width: 60%;
+#changeset_list .date {
+  white-space: nowrap;
+}
+
+#changeset_list .user {
+  white-space: nowrap;
+}
+
+#changeset_list .area {
+  white-space: nowrap;
 }
 
 #changeset_list.th {
